--- a/TANHUNG/index.html
+++ b/TANHUNG/index.html
@@ -51,6 +51,12 @@
                 <p>Thư viện AOS, GSAP & Animate.css</p>
                 <div class="btn-explore">Khám phá ngay</div>
             </a>
+            <a href="baitaplon/index.html" class="glass-card">
+                <div class="icon-box">🎥</div>
+                <h2>bài tập lớn</h2>
+                <p>website về phim </p>
+                <div class="btn-explore">Khám phá ngay</div>
+            </a>
         </div>
     </div>
 
