--- a/TANHUNG/index.html
+++ b/TANHUNG/index.html
@@ -51,12 +51,20 @@
                 <p>Thư viện AOS, GSAP & Animate.css</p>
                 <div class="btn-explore">Khám phá ngay</div>
             </a>
-            <a href="baitaplon/index.html" class="glass-card">
+            
+            <a href="/index.html" class="glass-card">
                 <div class="icon-box">🎥</div>
                 <h2>bài tập lớn</h2>
                 <p>website về phim </p>
                 <div class="btn-explore">Khám phá ngay</div>
             </a>
+
+            <a href="MiniProject2_NguyenTanHung/index.html" class="glass-card">
+                <div class="icon-box">🎨</div> <h2>Mini Project 2</h2>
+                <p>Giao diện Creative Studio & UI/UX Design</p>
+                <div class="btn-explore">Khám phá ngay</div>
+            </a>
+
         </div>
     </div>
 
